dark mode fixes

--- a/src/app/components/Fixtures/Matches.css
+++ b/src/app/components/Fixtures/Matches.css
@@ -40,7 +40,6 @@
       justify-content: center;
       flex-wrap: wrap;
       flex-direction: column;
-      background: #fff;
 
 
       .button_close{
@@ -66,7 +65,6 @@
       }
     }
     .card {
-      background: #fff;
       border-radius: 15px;
       width: 100%;
       height: 100%;
